// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`broadcastCreatedTodo action should create the proper action object 1`] = `
Object {
  "data": Object {
    "id": 1,
    "name": "doYourWork",
  },
  "type": "CREATE_SUCCEEDED",
}
`;

exports[`broadcastDeletedTodo action should create the proper action object 1`] = `
Object {
  "todoId": 1,
  "type": "DELETE_SUCCEEDED",
}
`;

exports[`broadcastFetchedTodos action should create the proper action object 1`] = `
Object {
  "data": Array [
    Object {
      "id": 1,
      "name": "doYourWork",
    },
  ],
  "type": "FETCH_SUCCEEDED",
}
`;

exports[`broadcastUpdatedTodo action should create the proper action object 1`] = `
Object {
  "data": Object {
    "id": 2,
    "name": "updatedTodo",
  },
  "todoId": 2,
  "type": "UPDATE_SUCCEEDED",
}
`;

exports[`createTodo action should create the proper action object 1`] = `
Object {
  "type": "CREATE",
}
`;

exports[`deleteTodo action should create the proper action object 1`] = `
Object {
  "todoId": 1,
  "type": "DELETE",
}
`;

exports[`fetchAllTodos action should create the proper action object 1`] = `
Object {
  "type": "FETCH",
}
`;

exports[`updateTodo action should create the proper action object 1`] = `
Object {
  "data": Object {
    "id": 1,
    "name": "updatedName",
  },
  "todoId": 1,
  "type": "UPDATE",
}
`;
